--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="main.css" />
     <script defer src="/src/app.js"></script>
-    <title>ToDo App (Sass)</title>
+    <title>ToDo App</title>
   </head>
   <body>
     <div class="app-container">
